@@ -1,3 +1,8 @@
+2003-08-20  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* library/console.tcl: update mark usage
+	* library/balloonhelp.tcl: add canvas item id tooltip support
+
 2001-08-20  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* library/console.tcl: fixed some regexps to work better in 8.1+
